# mss-alt

./: .gitignore  .ruff.toml  README.md  pyproject.toml  ruff.toml
alt/: .gitignore  README.md
alt/expt/01-ss/: analyse.py  long.ipynb  short.ipynb  ss.py
alt/expt/02-short/: analysis.ipynb  short.ipynb
alt/expt/04-long/: long.ipynb
data/: dali_v2_durations.json  dali_v2_exclude_ids.json  dali_v2_torchaudio_noncompat.json
expt/01-ss/: README.md  download_musdb.sh  long.ipynb  short.ipynb  ss.py  ss_infer.py  ss_plots.ipynb  ss_prepare.py
expt/02-short/: README.md  run.py
expt/04-long/: run.py
notebooks/: 00-vad-rendering.ipynb
src/alt/: alt_types.py  asr_pool.py  convert_to_hf.py  create_data.py  data.py  demucs_pool.py  evaluate.py  extract.py  html_templates.py  infer.py  merge.py  metrics.py  model.py  normalization.py  preproc.py  render.py  separate.py  tokenizer.py  util.py
tests/: test_extract.py
tests/alt/: test_merge.py
