[project]
name = "alt"
version = "0.0.1"
description = "ALT Research Repo"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [{ name = "Jaza Syed", email = "j.syed@qmul.ac.uk" }]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

# ────────────────────────────────────────────────────────────────────────────────
# Core Conda-level runtime deps
[tool.pixi.dependencies]
ffmpeg = "*"

# Core PyPI-level runtime deps
[tool.pixi.pypi-dependencies]
alt = { path = ".", editable = true }
faster-whisper = { git = "https://github.com/SYSTRAN/faster-whisper.git", rev = "97a4785" }
# dali_dataset = { git = "https://github.com/gabolsgabs/DALI.git", branch = "version2", subdirectory = "code" }
demucs = { git = "https://github.com/facebookresearch/demucs.git", tag = "v4.0.1" } # v4.0.1 
# espnet = "==202412"
# espnet_model_zoo = "*"
jiwer = ">=3.0.3"
python-iso639 = ">=2023.6.15"
regex = ">=2023.8.8"
sacremoses = "==0.0.53"
# for owsm?
transformers = { version = "<5", extras = ["torch"] }
onnxruntime = "*"
# torch="*"
# uncomment then update / install
# flash-attn = ">=2,<3"
datasets = "*"
soundfile = "<0.13"
librosa = "*"
numpy = "*"
matplotlib = "*"
tqdm = "*"
dataclasses_json = "*"
seaborn = "*"
ipykernel = ">=6.29.5,<7"
ipywidgets = "*"
msgpack="==1.0.6"   # a dependency of librosa that has not been declared.

# [tool.pixi.pypi-options]
# no-build-isolation = ["flash-attn"]

# ────────────────────────────────────────────────────────────────────────────────
# Build wheel target
[tool.hatch.build.targets.wheel]
packages = ["src/alt"]

# ────────────────────────────────────────────────────────────────────────────────
# Features
[tool.pixi.feature.dev]
platforms = ["linux-64", "osx-arm64"]
pypi-dependencies = { ruff = "*", pre-commit = "*", ipython = "*" , pytest = "*"}

# Ensure CUDA available on linux
[tool.pixi.feature.cuda]
platforms = ["linux-64"]
system-requirements = {cuda = "12"}
dependencies = { cudnn = "9.*" }

# Tie features into environments
[tool.pixi.environments]
dev = ["dev"]
cuda = ["cuda"]
dev-cuda = ["dev", "cuda"]
